@@ -24,5 +24,6 @@ EXPORTED {
 		xchat_list_int;
 		xchat_plugingui_add;
 		xchat_plugingui_remove;
+		xchat_emit_print;
 	local: *;
 };
